[package]
name = "trail-config"
version = "0.4.0"
edition = "2021"
authors = ["Robert Lampreht <robert.lampreht@gmail.com>"]
description = "A Rust library for reading YAML config files with path-based access, typed and struct deserialization, environment-specific overlays, deep merging, and hot reload support"
readme = "README.md"
keywords = ["config", "yaml", "deserialize", "merge", "hot-reload"]
categories = ["config", "parsing", "filesystem", "encoding"]
license = "MIT"
repository = "https://github.com/rbt-dev/trail-config.git"

[lib]
name = "trail_config"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml_bw = "2.5.2"
strfmt = "0.2.4"
