[package]
name = "trail-config"
version = "0.4.0"
edition = "2021"
authors = ["Robert Lampreht <robert.lampreht@gmail.com>"]
description = "A Rust library for reading config files with path-based access, typed deserialization, environment overlays, deep merging, env variable interpolation, and hot reload support."
readme = "README.md"
keywords = ["config", "env", "deserialize", "merge", "hot-reload"]
categories = ["config", "parsing", "filesystem", "development-tools"]
license = "MIT"
repository = "https://github.com/rbt-dev/trail-config.git"

[lib]
name = "trail_config"
path = "src/lib.rs"

[features]
json = ["serde_json"]
toml = ["dep:toml"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
toml = { version = "0.9", optional = true }
yaml_serde = "0.10"